--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,50 +16,87 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:contentInsetLeft="0dp"
+            android:contentInsetStart="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            android:contentInsetRight="0dp"
+            android:contentInsetEnd="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetEnd="0dp">
 
             <RelativeLayout
+                android:id="@+id/defaultToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp">
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
 
-            <ImageButton
-                android:id="@+id/back_button"
+                <ImageButton
+                    android:id="@+id/back_button"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_back"
+                    android:background="@null"
+                    android:layout_marginRight="10dp"/>
+    
+                <TextView
+                    android:layout_toEndOf="@id/back_button"
+                    android:id="@+id/toolbar_title"
+                    android:textSize="@dimen/toolbar_title"
+                    android:layout_centerVertical="true"
+                    android:textColor="@color/toolbarColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+    
+                <ImageButton
+                    android:id="@+id/setting_button"
+                    android:layout_alignParentEnd="true"
+                    android:visibility="visible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_setting"
+                    android:background="@null"/>
+    
+                <ImageButton
+                    android:id="@+id/delete_button"
+                    android:layout_alignParentEnd="true"
+                    android:visibility="visible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_delete"
+                    android:background="@null"/>
+
+            </RelativeLayout>
+            
+            <RelativeLayout
+                android:id="@+id/selectedActionToolbar"
                 android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_back"
-                android:background="@null"
-                android:layout_marginRight="10dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@android:color/background_dark"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
 
-            <TextView
-                android:layout_toEndOf="@id/back_button"
-                android:id="@+id/toolbar_title"
-                android:textSize="@dimen/toolbar_title"
-                android:layout_centerVertical="true"
-                android:textColor="@color/toolbarColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                <TextView
+                    android:id="@+id/totalSelected"
+                    android:text="0 Selected"
+                    android:layout_centerVertical="true"
+                    android:textColor="@android:color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-            <ImageButton
-                android:id="@+id/setting_button"
-                android:layout_alignParentEnd="true"
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_setting"
-                android:background="@null"/>
-
-            <ImageButton
-                android:id="@+id/delete_button"
-                android:layout_alignParentEnd="true"
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_delete"
-                android:background="@null"/>
+                <TextView
+                    android:id="@+id/deleteSelected"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:text="DELETE"
+                    android:textColor="@android:color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
             </RelativeLayout>
 
